feat: add expireAt option for UpdateUserSegments.
