# docs/swagger.json
@@ -368,7 +368,7 @@
                 "segments_to_add": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/segmentify_internal_models.SegmentToAdd"
                     }
                 },
                 "segments_to_remove": {
@@ -383,6 +383,20 @@
             "type": "object",
             "properties": {
                 "detail": {
+                    "type": "string"
+                }
+            }
+        },
+        "segmentify_internal_models.SegmentToAdd": {
+            "type": "object",
+            "required": [
+                "slug"
+            ],
+            "properties": {
+                "exprire_at": {
+                    "type": "string"
+                },
+                "slug": {
                     "type": "string"
                 }
             }
